--- a/themes.local/feedmei.css
+++ b/themes.local/feedmei.css
@@ -47,15 +47,22 @@
 .ttrss_prefs .dijitCheckBox,
 .ttrss_prefs #feedConfigTab .dijitTreeIcon img { margin-top: -5px }
 
-.dijitTreeExpando,
-.dijitButton .dijitButtonText { margin-top: -4px }
-
 i.material-icons.icon-restore { margin: -5px 0 0 -1px }
 
 #feedTree .dijitTreeExpandoClosed,
 #feedTree .dijitTreeExpandoOpened { margin: -4px -1px 0 24px }
 
+.dijitTreeExpando,
+.dijitButton .dijitButtonText { margin-top: -4px }
+
+body.ttrss_main div.whiteBox p,
+body.ttrss_main div.post div.header .row { margin-bottom: 0 }
+
+#content-insert .header i { margin-top: 1px }
+
 #feedTree .dijitTreeRow { margin-left: -18px }
+
+.buttons.right { margin-right: -4px }
 
 .content-inner figure {
 	margin: 1em 0;
@@ -82,7 +89,6 @@ body.ttrss_main #headlines-spacer {
 	font-size: 1em;
 	padding-bottom: 1em;
 }
-	body.ttrss_main div.whiteBox p { margin-bottom: 0 }
 
 body.ttrss_main #toolbar-frame #toolbar {
 	padding: 5px 0;
@@ -114,7 +120,6 @@ body.ttrss_main #overlay_inner {
 
 .dijitTreeNode .dijitTreeRow,
 .dijitTreeNode .dijitTreeRowSelected,
-#floatingTitle .title,
 #floatingTitle .author,
 #floatingTitle .updated,
 #floatingTitle .icon-score,
@@ -153,8 +158,9 @@ body.ttrss_main #feeds-holder #feedTree .dijitTreeRow.Error .dijitTreeLabel { co
 #floatingTitle .feed a,
 #floatingTitle img.icon,
 .header .feed a,
-#headlines-frame .icon,
+#headlines-frame .hl .feed,
 #headlines-frame .dijitCheckBox,
+#headlines-frame .icon,
 .feed-icon img,
 .feed-title img,
 .header img {
@@ -162,7 +168,6 @@ body.ttrss_main #feeds-holder #feedTree .dijitTreeRow.Error .dijitTreeLabel { co
 	filter: grayscale(100%) !important;
 }
 
-#headlines-frame .hl .feed,
 .dijitButton,
 .dijitCheckBox,
 .dijitComboButton {
@@ -202,52 +207,81 @@ a:hover,
 	background-color: #eee !important;
 }
 
-body.ttrss_main .hl.active { background: #eee !important }
+body.ttrss_main .hl,
+body.ttrss_main .hl.Unread,
+.cdm.expandable,
+.cdm.expandable.Unread,
+.cdm.expandable.active { background: #fefefe !important }
+
+body.ttrss_main .hl.active { background: #f5f5f5 !important }
 
 body.ttrss_main .hl.active :not(i),
+body.ttrss_main .hl.active .feed a,
 #toolbar .dijitOpened * { color: #444 }
 
 body.ttrss_main #headlines-frame div.feed-title {
-	padding: 5px 10px;
+	margin-top: -1px;
+	border-top-width: 1px;
 	border-color: #ddd;
 }
+
+div.cdm { transition: all .1s linear }
 
 div.cdm.expanded {
 	margin: 1.5em;
 	padding: 1em;
-	color: #555 !important;
+	color: #555;
 	border: 1px solid #eee;
-	transition: all .1s linear;
 }
 
-div.cdm.expanded.active:not(.Unread) {
-	background: #f9f9f9;
-	color: #444 !important;
-	border: 1px solid #ddd;
+#headlines-frame.normal,
+#headlines-frame .feed-title,
+#content-insert,
+div.cdm.expanded.active:not(.Unread),
+div.cdm.expandable.active:not(.Unread) {
+	background: #f9f9f9 !important;
+	color: #444;
 }
+	div.cdm.expanded.active:not(.Unread) { border: 1px solid #ddd }
 
+.header .row a,
+div.cdm.active div.content,
+#content-insert div.content,
+div.cdm.expanded.active div.header a.title,
+div.cdm.expandable.active div.header a.title { color: #444 }
+
+.header .title a,
 #toolbar-frame #toolbar,
 #toolbar-frame #toolbar #feed_title a,
 body.ttrss_main #toolbar-frame #toolbar #selected_prompt,
 div.cdm.expanded.Unread div.header a.title,
 div.cdm.expanded.Unread div.content,
+div.cdm.expandable.Unread div.header a.title,
 body.ttrss_main .hl.Unread div.title a,
 body.ttrss_main .hl.active.Unread div.title a { color: #555 }
 
-div.cdm.expanded div.header a.title,
+div#floatingTitle a.title,
+div#floatingTitle.Unread a.title,
 body.ttrss_main .hl div.title a,
-body.ttrss_main .hl.active .hl-content a.title { color: #777 }
+body.ttrss_main .hl.active .hl-content a.title,
+div.cdm.expanded div.header a.title,
+div.cdm.expanded.Unread.active div.header a.title,
+div.cdm.expandable.Unread.active div.header a.title { color: #777 }
+
+div.cdm.expandable div.header a.title,
+body.ttrss_main .hl:not(.Unread) .hl-content a.title,
+body.ttrss_main #headlines-frame div.feed-title a.title { font-weight: normal }
 
 .header .title a,
-.header .row a,
+div.cdm.expanded.active div.header a.title,
 div.cdm.expandable.active div.header a.title,
-div.cdm.expanded.active div.header a.title { color: #444 }
-
-div.cdm.active div.content,
-#content-insert div.content { color: #3c3c3c }
+div.cdm.expandable.Unread div.header a.title {
+	font-weight: bold;
+	letter-spacing: .005em;
+}
 
 div.cdm.expanded .footer {
-	padding-left: 0;
+	padding: 0 3px 0 0;
 	border: 0;
 }
 
